# ivi-logging

./: .clang-format  CMakeLists.txt
cmake/: dependencies.cmake.in
examples/basic/: CMakeLists.txt  exampleLogging.h  exampleLoggingMain.cpp  exampleLoggingOtherFile.cpp
examples/file/: exampleLoggingFile.cpp  logging-file.h
examples/multithreaded/: exampleLoggingMultithreaded.cpp
include/: ivi-logging-common.h  ivi-logging-config.h.in  ivi-logging-console.h  ivi-logging-dlt.h  ivi-logging-dltcpp.h  ivi-logging-file.h  ivi-logging-null.h  ivi-logging-stl.h  ivi-logging-types.h  ivi-logging-utils.h  ivi-logging.h  ivi-no-logging.h
src/: CMakeLists.txt  backtrace.cpp  ivi-logging-dlt.cpp  ivi-logging-dltcpp.cpp  ivi-logging.cpp
test/: test_multithreaded.cpp
tools/: applyCodeStyle.sh
